deploy/k8s/chad-apps-chart/templates/onboarding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onboarding
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: onboarding.metachad.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onboarding-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: onboarding-service
                port:
                  number: 80
  tls:
    - hosts:
        - onboarding.metachad.duckdns.org
      secretName: onboarding-cert
